--- a/index.html
+++ b/index.html
@@ -15,8 +15,46 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app">
+      <h1>Kuala Lumpur<h1>
+        <ul>
+          <li>
+            Sunday 10:00
+          </li>
+          <li>
+            Clear
+          </li>
+          
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"
+            />
+            12ºC | ºF
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>
+                Precipitation: 21%
+              </li>
+              <li>
+                Humidity: 72%
+              </li>
+              <li>
+                Wind: 13 km/h
+              </li>
+            </ul>
+          </div>
+          <small>
+            <a href="https://github.com/Geets19/weather-app-geets" target="_blank"
+            >Open-source code
+            </a>
+            by Geetha Girithari
+          </small>
+
+        </div>
+      
+    </div>
     </div>
     <script src="src/app.js"></script>
   </body>
