--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -18,10 +20,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Kuala Lumpur</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Sunday 10:00</li>
-              <li>Clear</li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -33,16 +35,15 @@
                   class="float-start"
                 />
                 <div class="float-start">
-                  <strong>12</strong
+                  <strong id="temperature"></strong
                   ><span class="units">ºC | <a href="#">ºF</a></span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 21%</li>
-                <li>Humidity: 72%</li>
-                <li>Wind: 13 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
