--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 <img src="" alt="Clear" id="icon" class="float-start" />
                 <div class="float-start">
                   <strong id="temperature"></strong
-                  ><span class="units">ºC | <a href="#">ºF</a></span>
+                  ><span class="units"
+                    ><a href="#" id="celcius-link" class="active">ºC</a> |
+                    <a href="#" id="fahrenheit-link">ºF</a></span
+                  >
                 </div>
               </div>
             </div>
