--- a/index.html
+++ b/index.html
@@ -53,8 +53,20 @@
                 <div class="float-start">
                   <strong id="temperature"></strong
                   ><span class="units"
-                    ><a href="#" id="celcius-link" class="active">ºC</a> |
-                    <a href="#" id="fahrenheit-link">ºF</a></span
+                    ><a
+                      href="#"
+                      id="celcius-link"
+                      style="text-decoration: none"
+                      class="active"
+                      >ºC</a
+                    >
+                    |
+                    <a
+                      href="#"
+                      id="fahrenheit-link"
+                      style="text-decoration: none"
+                      >ºF
+                    </a></span
                   >
                 </div>
               </div>
