--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  width="60"
+                />
+                <div class="weather-forecast-temperature">
+                  <span class="weather-forecast-temperature-max"> 18º </span>
+                  <span class="weather-forecast-temperature-min"> 12º </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a href="https://github.com/Geets19/weather-app-geets" target="_blank"
