Removed the imperial conversion

--- a/index.html
+++ b/index.html
@@ -52,22 +52,7 @@
                 <img src="" alt="Clear" id="icon" class="float-start" />
                 <div class="float-start">
                   <strong id="temperature"></strong
-                  ><span class="units"
-                    ><a
-                      href="#"
-                      id="celcius-link"
-                      style="text-decoration: none"
-                      class="active"
-                      >ºC</a
-                    >
-                    |
-                    <a
-                      href="#"
-                      id="fahrenheit-link"
-                      style="text-decoration: none"
-                      >ºF
-                    </a></span
-                  >
+                  ><span class="units">ºC</span>
                 </div>
               </div>
             </div>
