--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
         <small>
           <a href="https://github.com/Geets19/weather-app-geets" target="_blank"
-            >Open-source code-GitHub</a
-          >
+            >Open-sourced code - GitHub
+          </a>
           by Geetha Girithari
         </small>
       </div>
